--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/Gabrielaugustus" target="_blank">Gabriel Augustus</a> no desafio 10 do <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p>
 
     </footer>
 </body>
